--- a/app/templates/add-produto.html
+++ b/app/templates/add-produto.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block titulo %}Adicionar Produto{% endblock %}
 
-{% block conteudo %}
+{% block content %}
 <div class="container mt-5">
     <h2>Adicionar Novo Produto</h2>
     <form method="POST" enctype="multipart/form-data">
