--- a/app/templates/confirmar_exclusao_usuario.html
+++ b/app/templates/confirmar_exclusao_usuario.html
@@ -1,7 +1,7 @@
 {% extends "template.html" %}
 {% block titulo %}Confirmação de Exclusão{% endblock %}
 
-{% block conteudo %}
+{% block content %}
 <div class="container mt-5">
   <h2>Excluir Usuário</h2>
   <p>Tem certeza que deseja excluir o usuário <strong>{{ usuario.nome }}</strong> ({{ usuario.email }})?</p>
