--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
 | Login
 {% endblock %}
 
-{% block conteudo %}
+{% block content %}
   <h1>Login</h1>
 
   <!-- Exibe mensagens de erro (se houver) -->
