--- a/app/templates/produtos.html
+++ b/app/templates/produtos.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block titulo %}Produtos{% endblock %}
 
-{% block conteudo %}
+{% block content %}
 <div class="container mt-5">
   <!-- ====== SEÇÃO MAIS VENDIDOS ====== -->
   {% if produtos_destaque %}
