--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -4,7 +4,7 @@
 Checkout
 {% endblock %}
 
-{% block conteudo %}
+{% block content %}
 <div class="container mt-5">
   <h2 class="mb-4">Finalizar Compra</h2>
 
