--- a/app/templates/confirmacao.html
+++ b/app/templates/confirmacao.html
@@ -2,7 +2,7 @@
 {% extends "template.html" %}
 {% block titulo %}Compra Confirmada{% endblock %}
 
-{% block conteudo %}
+{% block content %}
 <div class="container mt-5 text-center">
     <h2>Compra realizada com sucesso!</h2>
     <p>Produto: {{ venda.produto.nome }}</p>
