--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block titulo %}Dashboard{% endblock %}
 
-{% block conteudo %}
+{% block content %}
   <div class="container mt-5">
     <h2 class="mb-4">Bem-vindo(a), {{ usuario_email }}</h2>
 
