--- a/app/templates/editar-usuario.html
+++ b/app/templates/editar-usuario.html
@@ -4,7 +4,7 @@
   Editar Usuario
 {% endblock %}
 
-{% block conteudo %}
+{% block content %}
     
     <form method="POST">
         {% csrf_token %}
