--- a/app/templates/grafico_estoque.html
+++ b/app/templates/grafico_estoque.html
@@ -1,7 +1,7 @@
 {% extends 'template.html' %}
 {% block titulo %}Gráfico de Estoque{% endblock %}
 
-{% block conteudo %}
+{% block content %}
 <div class="container mt-4">
   <h2 class="mb-4">Gráfico de Estoque</h2>
   <canvas id="estoqueChart" width="400" height="200"></canvas>
