--- a/app/templates/grafico_vendas.html
+++ b/app/templates/grafico_vendas.html
@@ -1,7 +1,7 @@
 {% extends 'template.html' %}
 {% block titulo %}Gráfico de Vendas{% endblock %}
 
-{% block conteudo %}
+{% block content %}
 <div class="container mt-4">
   <h2 class="mb-4">Gráfico de Vendas por Dia</h2>
   <canvas id="vendasChart" width="400" height="200"></canvas>
